--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	            <div class="panel-body">
 	              <strong>Instructors: </strong><br/>
                   &nbsp;&nbsp;&nbsp;&nbsp;<a href="http://minsukchang.com/">Prof. Minsuk Chang</a><br/>
-                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://dongyoonhan.github.io/">Prof. Dongyun Han</a><br/>
+                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://dongyoonhan.github.io/">Prof. Dongyoon Han</a><br/>
                   &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sang-woo-lee.com/">Prof. Sangwoo Lee</a>
                <br/><br/>
 	              <!-- &nbsp;&nbsp;&nbsp;&nbsp;<em>Office Hours</em>: 4-5pm Tue/Thu @ N1-605<br/><br/> -->
