--- a/class-logistics.html
+++ b/class-logistics.html
@@ -111,7 +111,7 @@
 					<strong>Class attendance</strong>: Because this is going to be a fairly small class, we know when you're present or absent. Activity submissions will also be used in your class participation grade.
 					<br/><br/>
 
-	              	<strong>Late policy</strong>: No late submissions are allowed for the project. For individual assignments, you'll lose 10% for each late day. Submissions will be accepted until three days after the deadline. No submission automatically gets a 0.
+	              	<strong>Late policy</strong>: No submission automatically gets a 0.
 	            </div>
 	          </div>
 	        </div>
