--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	            <div class="panel-body">
 	              <strong>Instructors: </strong><br/>
                   &nbsp;&nbsp;&nbsp;&nbsp;<a href="http://minsukchang.com/">Prof. Minsuk Chang</a><br/>
-                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://dongyoonhan.github.io/">Prof. Dongyun Han</a><br/>
+                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://dongyoonhan.github.io/">Prof. Dongyoon Han</a><br/>
                   &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sang-woo-lee.com/">Prof. Sangwoo Lee</a>
                <br/><br/>
 	              <!-- &nbsp;&nbsp;&nbsp;&nbsp;<em>Office Hours</em>: 4-5pm Tue/Thu @ N1-605<br/><br/> -->
@@ -638,7 +638,7 @@
                   </tr>                  
                   <tr>
                     <td>14</td>
-                    <td>5/27</td>
+                    <td>6/3</td>
                     <td>Human-centric NLP</td>
                     <td>이화란</td>
                     <td>
@@ -665,7 +665,7 @@
                   </tr>
                   <tr>
                     <td>14</td>
-                    <td>5/27</td>
+                    <td>6/3</td>
                     <td>Human-centric NLP</td>
                     <td>정준영, 이민아</td>
                     <td>
