--- a/index.html
+++ b/index.html
@@ -669,14 +669,18 @@
                     <td>Human-centric NLP</td>
                     <td>정준영, 이민아</td>
                     <td>
-                      (1) <span class="label label-primary">response 2</span> TBD <br/>
+                      (1) <span class="label label-primary">response 2</span> Chung, JJY, et al. "TaleBrush: Sketching Stories with Generative Pretrained Language Models", CHI 2022 <br/>
                       (2) <span class="label label-primary">response 2</span> TBD <br/><br/>
                     
                     <strong>Recommended reading</strong> <br/>
                       <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Clark, Elizabeth, et al. "Creative writing with a machine in the loop: Case studies on slogans and stories." IUI 2018
+                         </li>
+                        <li> Singh, Nikhil, et al. "Where to Hide a Stolen Elephant: Leaps in Creative Writing with Multimodal Machine Intelligence." ToCHI 2022
+                          </li>
+                        <li>Krause, Ben, et al. "Gedi: Generative discriminator guided sequence generation." EMNLP findings 2021
+                          </li>
+                          <li>Qian, Jin, et al. Controllable Natural Language Generation with Contrastive Prefixes, arXiv 2022</li>
                       </ul>
                     </td>
                     <td></td>
