openai's new gpt stuff

--- a/index.html
+++ b/index.html
@@ -632,6 +632,8 @@
                         <li> LoRA: Low-Rank Adaptation of Large Language Models (https://arxiv.org/abs/2106.09685)
                           </li>
                         <li>It's Not Just Size That Matters: Small Language Models Are Also Few-Shot Learners (https://arxiv.org/abs/2009.07118)</li>
+                        <li> Training language models to follow instructions with human feedback (InstructGPT), https://openai.com/blog/instruction-following/ </li>
+                        <li> </li>
                       </ul>
                     </td>
                     <td></td>
@@ -659,6 +661,7 @@
                             <li>Ma, Xinyao, et al. "PowerTransformer: Unsupervised Controllable Revision for Biased Language Correction." Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP). 2020.
                               </li>
                               <li>Xu, Albert, et al. "Detoxifying Language Models Risks Marginalizing Minority Voices." Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies. 2021.</li>
+                              <li> WebGPT: Improving the Factual Accuracy of Language Models through Web Browsing (WebGPT)</li>
                       </ul>
                     </td>
                     <td></td>
@@ -671,7 +674,7 @@
                     <td>
                       (1) <span class="label label-primary">response 2</span> Chung, JJY, et al. "TaleBrush: Sketching Stories with Generative Pretrained Language Models", CHI 2022 <br/>
                       (2) <span class="label label-primary">response 2</span> TBD <br/><br/>
-                    
+                      
                     <strong>Recommended reading</strong> <br/>
                       <ul>
                         <li>Clark, Elizabeth, et al. "Creative writing with a machine in the loop: Case studies on slogans and stories." IUI 2018
