removed empty readings

--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
                   <strong>Recommended reading</strong> <br/>
                     <ul>
                       <li>Park et al., Multiple Heads are Better than One:Few-shot Font Generation with Multiple Localized Experts, ICCV 2021, https://arxiv.org/abs/2104.00887 </li>
-                      <li></li>
-                      <li></li>
+                      <!-- <li></li>
+                      <li></li> -->
                     </ul>
                   </td>
                     <td></td>
@@ -698,12 +698,12 @@
                      <br/>
                       (2) <span class="label label-primary">response 1</span> Shin et al. "One4all user representation for recommender systems in e-commerce", arXiv 2021. https://arxiv.org/abs/2106.00573 <br/><br/>
                     
-                    <strong>Recommended reading</strong> <br/>
+                    <!-- <strong>Recommended reading</strong> <br/>
                       <ul>
                         <li></li>
                         <li></li>
                         <li></li>
-                      </ul>
+                      </ul> -->
                     </td>
                     <td></td>
                   </tr> 
