author name typo

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                           </li>
                         <li>Krause, Ben, et al. "Gedi: Generative discriminator guided sequence generation." EMNLP findings 2021
                           </li>
-                          <li>Qian, Jin, et al. Controllable Natural Language Generation with Contrastive Prefixes, arXiv 2022</li>
+                          <li>Qian, Jing et al. "Controllable Natural Language Generation with Contrastive Prefixes", arXiv 2022</li>
                       </ul>
                     </td>
                     <td></td>
