update author/paper/venue formatting
update author/paper/venue formatting

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                     <td>Human-centric NLP</td>
                     <td>정준영, 이민아</td>
                     <td>
-                      (1) <span class="label label-primary">response 2</span> Chung, JJY, et al. "TaleBrush: Sketching Stories with Generative Pretrained Language Models", CHI 2022 <br/>
+                      (1) <span class="label label-primary">response 2</span> Chung, JJY, et al. <a href="https://johnr0.github.io/assets/publications/CHI2022-TaleBrush.pdf">"TaleBrush: Sketching Stories with Generative Pretrained Language Models."</a>, CHI 2022 <br/>
                       (2) <span class="label label-primary">response 2</span> TBD <br/><br/>
                       
                     <strong>Recommended reading</strong> <br/>
