--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <td>1</td>
                     <td>3/4</td>
                     <td>Introduction & Course Overview + AI research in industry</td>
-                    <td>한동윤, 하정우</td>
+                    <td>하정우</td>
                     <td> <strong> please read the updated course syllabus, and please ask any questions you might have. </strong></td>
                     <td></td>
                   </tr>
