--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@
 	            </div>
 	            <div class="panel-body">
 	              <ul>
-                  <li><p style="color:red"><strong>3/3: Extra enrollment is closed - but spaces might open up if others unregister. If you want to be waitlisted, please fill in <a href="https://forms.gle/dkkVrdWE6q67Fybc9">this survey</a>. We will enroll you first come first serve once spaces open up.</strong></p></li>
+                  <li>3/4: First day of class! </li>
+                  <li>3/3: Extra enrollment is closed <s>- but spaces might open up if others unregister. If you want to be waitlisted, please fill in <a href="">this survey</a>. We will enroll you first come first serve once spaces open up.</s></li>
                   <li><p style="color:red"><strong>3/2: You may "audit" or "sit in" this class, but you still have to submit reading responses and actively participate in class activities. If you're interested, please send an email to <a href="mailto:dl_ai599@navercorp.com">dl_ai599@navercorp.com </a> .</strong></p></li>
-                  <li>3/2: We are accepting extra enrollments, but spaces are limited to total of 46 students. If you're interested in taking this class, please send an email to <a href="mailto:dl_ai599@navercorp.com">dl_ai599@navercorp.com </a> and fill in <a href="https://forms.gle/dkkVrdWE6q67Fybc9">this survey</a>. Current headcount: 45/46 </li>
+                  <li>3/2: We are accepting extra enrollments, but spaces are limited to total of 46 students. If you're interested in taking this class, please send an email to <a href="mailto:dl_ai599@navercorp.com">dl_ai599@navercorp.com </a> and fill in <a href="">this survey</a>. Current headcount: 46/46 </li>
 	              	<li>2/28: Welcome to the deep learning and real-world applications class! We're still finalizing the schedule and the reading list. Stay tuned! </li>
 	              </ul>
 	            </div>
