--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                         <li> Sheng, Emily, et al. <a href="https://arxiv.org/abs/2010.12820"> "“Nice Try, Kiddo”: Investigating Ad Hominems in Dialogue Responses."</a>, NAACL 2021</li>
                         <li> Ma, Xinyao, et al. <a href="https://arxiv.org/abs/2010.13816"> "PowerTransformer: Unsupervised Controllable Revision for Biased Language Correction."</a>, EMNLP 2020</li>
                         <li> Xu, Albert, et al. <a href="https://arxiv.org/abs/2104.06390"> "Detoxifying Language Models Risks Marginalizing Minority Voices."</a>, NAACL 2021</li>
-                        <li> OpenAI. <a href=""> "WebGPT: Improving the Factual Accuracy of Language Models through Web Browsing (WebGPT)."</a>, OpenAI Blog 2021</li>
+                        <li> OpenAI. <a href="https://arxiv.org/abs/2112.09332"> "WebGPT: Improving the Factual Accuracy of Language Models through Web Browsing (WebGPT)."</a>,ArXiv 2021</li>
                       </ul>
                     </td>
                     <td></td>
