--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                         <li> He, Junxian, et al. <a href="https://arxiv.org/abs/2110.04366"> "Towards a Unified View of Parameter-Efficient Transfer Learning."</a>, ICLR 2022</li>
                         <li> J. Hu, Edward, et al. <a href="https://arxiv.org/abs/2106.09685"> "LoRA: Low-Rank Adaptation of Large Language Models."</a>, arXiv 2021</li>
                         <li> Schick, Timo and Schütze, Hinrich <a href="https://arxiv.org/abs/2009.07118"> "It's Not Just Size That Matters: Small Language Models Are Also Few-Shot Learners."</a>, NAACL 2021</li>
-                        <li> Ouyang, Long, et al. <a href="https://openai.com/blog/instruction-following/"> "Training language models to follow instructions with human feedback (InstructGPT)</a>, OpenAI Blog 2022</li>
+                        <li> Ouyang, Long, et al. <a href="https://cdn.openai.com/papers/Training_language_models_to_follow_instructions_with_human_feedback.pdf"> "Training language models to follow instructions with human feedback (InstructGPT)</a>, OpenAI Blog 2022</li>
                       </ul>
                     </td>
                     <td></td>
