--- a/topic-presentation.html
+++ b/topic-presentation.html
@@ -118,7 +118,7 @@
                 <p>Your presentation will be graded by the course staff. We will evaluate your presentation based on the following criteria:
                   <ul>
                   <li><strong>Summary and Analysis</strong>: How well did you cover the main points in the topic of interest? How well did you summarize the paper(s)</li>
-                  <li><strong>Discussion</strong>: Did you facilitate an engaging and deep discussion aroung the topic? Did students actively participate in the discussion? Were your questions and prompts well thought out?</li>
+                  <li><strong>Discussion</strong>: Did you facilitate an engaging and deep discussion aroung the topic? Did students actively participate in the discussion? Were your questions and prompts well thought out? Please concerns the followings, for example, what is disadvnatages of this work?/what would be the extension in this line of the study?  </li>
                   <li><strong>Presentation</strong>: How well did the overall presentation go? This includes the organization, your delivery both verbally and visually, level of preparation, quality of material, fluidity of discussion, and peer students' reaction.</li>
                   </ul>
                 </p>
