--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
 	            </div>
 	            <div class="panel-body">
 	              <ul>
+                  <li>3/18: The lecture slide for each class will be provided before the class at KLMS (If there are no restricted contents), and the recorded clips for each class are currently unavailable.
+ </li>			      
                   <li>3/4: First day of class!  </li>
                   <li>3/3: Extra enrollment is closed <s>- but spaces might open up if others unregister. If you want to be waitlisted, please fill in <a href="">this survey</a>. We will enroll you first come first serve once spaces open up.</s></li>
                   <li><p style="color:red"><strong>3/2: You may "audit" or "sit in" this class, but you still have to submit reading responses and actively participate in class activities. If you're interested, please send an email to <a href="mailto:dl_ai599@navercorp.com">dl_ai599@navercorp.com </a>.</strong></p></li>
