--- a/topic-presentation.html
+++ b/topic-presentation.html
@@ -118,7 +118,7 @@
                 <p>Your presentation will be graded by the course staff. We will evaluate your presentation based on the following criteria:
                   <ul>
                   <li><strong>Summary and Analysis</strong>: How well did you cover the main points in the topic of interest? How well did you summarize the paper(s)</li>
-                  <li><strong>Discussion</strong>: Did you facilitate an engaging and deep discussion aroung the topic? Did students actively participate in the discussion? Were your questions and prompts well thought out? Please address the following concerns, for example, what is the disadvnatages of this work?+how can we fix them? or what would be extensions in this line of the study?  </li>
+                  <li><strong>Discussion</strong>: Did you facilitate an engaging and deep discussion aroung the topic? Did students actively participate in the discussion? Were your questions and prompts well thought out? Please address the following concerns, for example, 1) what are the pros and cons of this work?; 2) what can we move one step forward in this line of the study?; or 3) any nice ideas you have?  </li>
                   <li><strong>Presentation</strong>: How well did the overall presentation go? This includes the organization, your delivery both verbally and visually, level of preparation, quality of material, fluidity of discussion, and peer students' reaction.</li>
                   </ul>
                 </p>
