--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                 <li>Quizes: 10%</li>
 				      </ul>
 
-      				<strong>Late policy</strong>: Three lowest reading response grades will be removed. Each quiz score will be normalized identical to the score of 5 questions asked duing each class. No late submissions are allowed for the reading responses.
+      				<strong>Late policy</strong>: Three lowest reading response grades will be removed. Each quiz score will be normalized identical to the score of 5 questions asked in the lessons. No late submissions are allowed for the reading responses.
 	            </div>
 	          </div>         
 	        </div>	        
