--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                   
                   <strong>Recommended reading</strong> <br/>
                     <ul>
-                      <li> Baek, Youngmin, et al. <a href="https://arxiv.org/abs/1904.01906"> "What Is Wrong With Scene Text Recognition Model Comparisons? Dataset and Model Analysis."</a>, ICCV 2019</li>
+                      <li> Baek, Jeonghun, et al. <a href="https://arxiv.org/abs/1904.01906"> "What Is Wrong With Scene Text Recognition Model Comparisons? Dataset and Model Analysis."</a>, ICCV 2019</li>
                       <li> Baek, Youngmin, et al. <a href="https://arxiv.org/abs/2007.09629"> "Character Region Attention For Text Spotting"</a>, ECCV 2020</li>
                       <li></li>
                     </ul>
